--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^17.0.0",
@@ -14,6 +15,7 @@
   "dependencies": {
     "apollo-server-express": "^3.5.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "graphql": "^15.8.0",
