--- a/web/package.json
+++ b/web/package.json
@@ -14,9 +14,12 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "apollo-boost": "^0.4.9",
+    "apollo-link-token-refresh": "^0.3.3",
     "graphql": "^16.2.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
@@ -48,9 +51,11 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.3.0",
-    "@types/graphql": "^14.5.0",
     "@graphql-codegen/typescript": "2.4.1",
+    "@graphql-codegen/typescript-operations": "2.2.1",
     "@graphql-codegen/typescript-react-apollo": "3.2.2",
-    "@graphql-codegen/typescript-operations": "2.2.1"
+    "@types/graphql": "^14.5.0",
+    "@types/jwt-decode": "^3.1.0",
+    "@types/react-router-dom": "^5.3.2"
   }
 }
